@@ -1,3 +1,9 @@
+2008-02-24  Torsten Schoenfeld  <kaffeetisch@gmx.de>
+
+	* Cairo.pm
+	* Cairo.xs
+	* t/Cairo.t: Wrap cairo_has_current_point.
+
 2008-02-12  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
 	* Cairo.pm
